# nullspace

./: .gitignore  .mailmap  CLAUDE.md  README.md  nullspace.vcxproj
android/app/: .gitignore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  nullspace_android.cpp
android/app/src/main/java/com/plushnode/nullspace/: MainActivity.java
android/app/src/main/java/com/systems/automaton/nullorbit/: MainActivity.java
android/app/src/main/res/values/: colors.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/: CMakeLists.txt
ios/NullOrbit/: AppDelegate.mm  GameView.h  GameView.mm  Info.plist  LaunchScreen.storyboard  NullOrbit-Prefix.pch  NullspaceIOS.h  ViewController.mm  nullspace_ios.mm
src/null/: ChatController.cpp  ChatController.h  Game.cpp  Game.h  Notification.cpp  Notification.h  OnboardingWizard.cpp  OnboardingWizard.h  Platform.cpp  PlayerManager.cpp  PlayerManager.h  Radar.cpp  ShipController.cpp  ShipController.h  Soccer.cpp  Soccer.h  Sound.cpp  SpectateView.cpp  StatBox.cpp  StatBox.h  Types.h  WeaponManager.cpp  main.cpp
src/null/android/: AndroidSettings.cpp  AndroidSettings.h  GameMenuAndroid.cpp  GameMenuMobile.cpp
src/null/ios/: IOSSettings.h  IOSSettings.mm
src/null/net/: Connection.cpp
src/null/render/: Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  TileRenderer.cpp
